<resources>
    <string name="app_name">ProjectCT</string>
    <string name="name">Car Transportation</string>
    <string name="tag">Quick trip for your car</string>
    <string name="log_tag">Sign In</string>
    <string name="welcome">Sign Up</string>
    <string name="login">Login or e-mail</string>
    <string name="password">Password</string>
    <string name="sign_id">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot">Forget password?</string>
    <string name="errorLogin">Eror Login or Password</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="password_again">Password again</string>
    <string name="confirm">Go</string>
    <string name="back_login">Already have an account? Login</string>
    <string name="order_list">Order List</string>
    <string name="all">All</string>
    <string name="my_order">My</string>
    <string name="profile">My account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_order_nav_bottom_menu">List order</string>
    <string name="add_order_nav_bottom_menu">Add order</string>
    <string name="profile_order_nav_bottom_menu">Profile</string>
    <string name="test">Test</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="newOrder">Create order</string>
    <string name="car">Car name</string>
    <string name="shipping">Shipping</string>
    <string name="from">From</string>
    <string name="where">Where</string>
    <string name="renumeration"> Remuneration</string>
    <string name="description">Description</string>
    <string name="accept">Accept</string>
    <string name="recover">Password recovery</string>
    <string name="your_email">Your email</string>
    <string name="send_email">Send me password</string>
    <string name="ok">Ok</string>
    <string name="username">Username</string>
    <string name="errorRegClear">Not all fields are filed</string>
    <string name="errorRegNotGoodPass">Not a strong password</string>
    <string name="errorRegPassNotRepeat">Passwords do not match</string>
    <string name="errorRegEmailIsUse">This email is already taken</string>
    <string name="errorInternetConnect">Internet not available</string>
    <string-array name="spinner_valut">
        <item>EUR</item>
        <item>BGN</item>
        <item>DKK</item>
        <item>PLN</item>
        <item>RON</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>SEK</item>
    </string-array>
    <string name="order">Order</string>
    <string name="back">Back</string>
    <string name="account_order">Owner order</string>
    <string name="errorAddTrans">Error add new Transportations</string>
    <string name="addTrans">Add new Transportations</string>
    <string name="save">Save</string>
    <string name="change_the_data">Change the data</string>
    <string name="change_password">Change your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="errorNewpassSameOldpass">Old password a same new password</string>
    <string name="erroremptyoldpassword">Write old password</string>
    <string name="erroremptynewpassword">Write new password in two lines</string>
    <string name="erroremptylines">Lines can\'t be empty</string>
    <string name="errorphonenumber">Phone number don\'t correct</string>
    <string name="history_your_order">History your orders</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="data_changed">Data is changed</string>
    <string name="errorEmail">invalid Email</string>
    <string name="errorEmailInPass">Don\'t use email in password</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidGV4bmFyaTAiLCJhIjoiY2tvcG4weWl1MG1xeDJucDl3enJ6YTlvaCJ9.7YWNWw-1YnTReZcP6Mwheg</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="stop">Cancel</string>
    <string name="start">Select a location</string>
    <string name="filtr">Apply</string>
    <string-array name="spinner_filtr">
        <item>From the new ones</item>
        <item>From the old ones</item>
        <item>Falling price</item>
        <item>Increasing price</item>
    </string-array>
</resources>