<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/images"
        android:transitionName="logo_image"
        android:layout_gravity="center"/>
    <TextView
        android:transitionName="logo_text"
        android:id="@+id/reg_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/menuText"
        android:fontFamily="sans-serif-thin"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/reg_name"
            android:transitionName="logo_username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_number_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passwordReg"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordReg_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
               />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_again"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_repeat"
            android:transitionName="logo_password"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_repeat_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            android:text="@string/confirm"
            android:backgroundTint="@color/menuText"
            android:transitionName="transition_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_login"
            android:background="#00000000"
            android:text="@string/back_login"
            android:textColor="@color/menuText"
            android:transitionName="transition_button_2"/>
    </LinearLayout>


</LinearLayout>