<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Change_your_password">


    <Button
        android:id="@+id/but_save_change2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="@color/menuText"
        app:layout_constraintBottom_toTopOf="@+id/but_back_to_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/but_back_to_edit_profile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/back"
        android:textSize="20sp"
        app:backgroundTint="@color/menuText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/menuText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/old_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/menuText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_new_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/menuText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/new_password_again">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_new_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/menuText" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
