<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.My_order_list">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_list"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/all_order_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all"
                android:background="#00000000"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/my_order_my"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/active"
                android:text="@string/my_order"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Filtry -->
            <!-- Dodawanie z bazy danych -->
        </LinearLayout>
    </LinearLayout>

</FrameLayout>