<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Add_order">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/newOrder"
            android:textColor="@color/menuText"
            android:textSize="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/car">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/car_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/shipping_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/shipping"
            android:textColor="@color/menuText"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:hint="@string/from">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/menuText" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-180dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:hint="@string/where">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/where_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/menuText"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/renumeration_View"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:text="@string/renumeration"
                android:textColor="@color/menuText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/renumeration_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center"
                android:textColor="@color/menuText" />

            <Spinner
                android:id="@+id/renumertion_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_View"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="110dp"
                android:hint="@string/description"
                android:paddingBottom="-100dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAcceptAdd"
                android:layout_width="150dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                android:layout_gravity="center"
                android:text="@string/accept"
                app:backgroundTint="@color/menuText" />
        </LinearLayout>




    </LinearLayout>

</FrameLayout>