<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_textView"
            android:textSize="30sp"
            android:text="@string/recover"
            android:textColor="@color/menuText"
            android:gravity="center"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_email"
                android:layout_width="217dp"
                android:layout_height="174dp"
                android:layout_gravity="center"
                android:layout_marginTop="130dp"
                android:src="@drawable/check_your_email"
                android:visibility="invisible"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_forgotView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/your_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/your_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/menuText" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:backgroundTint="@color/menuText"
                android:layout_gravity="center"
                android:layout_marginTop="50dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_ok"
                android:text="@string/ok"
                android:backgroundTint="@color/menuText"
                android:visibility="invisible"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>