<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Edit">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/first_name"
                android:textAlignment="center"
                android:textColor="@color/menuText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/last_name"
                android:textAlignment="center"
                android:textColor="@color/menuText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView10"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="@color/menuText"
                android:textSize="20sp" />
            <com.tfcporciuncula.phonemoji.PhonemojiFlagTextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Flag"
                android:gravity="center"
                android:textSize="16sp"
                app:phonemoji_flagFor="@id/phonemojiTextInputEditTex"
                />
            <com.tfcporciuncula.phonemoji.PhonemojiTextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phonemojiTextInputEditTex"
                app:phonemoji_initialRegionCode="PL"
                android:layout_weight="10"
                android:enabled="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/e_mail"
                android:textAlignment="center"
                android:textColor="@color/menuText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/edit_profile"
        android:textColor="@color/menuText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_save_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/change_the_data"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="@color/menuText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/but_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:backgroundTint="@color/menuText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/but_back_to_menu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/back"
        android:textSize="20sp"
        app:backgroundTint="@color/menuText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>